[gd_scene load_steps=2 format=2]

[ext_resource path="res://Counter.gd" type="Script" id=1]

[node name="Counter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 274.0
margin_top = 242.0
margin_right = 750.0
margin_bottom = 357.0

[node name="MainCounter" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 476.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MainCounter"]
margin_right = 476.0
margin_bottom = 31.0
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/MainCounter"]
margin_top = 35.0
margin_right = 476.0
margin_bottom = 55.0
text = "Increment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 476.0
margin_bottom = 115.0

[node name="ClickPower" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/ClickPower"]
margin_right = 140.0
margin_bottom = 14.0
text = "Click power: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/ClickPower"]
margin_top = 18.0
margin_right = 140.0
margin_bottom = 32.0
text = "price: 25"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/ClickPower"]
margin_top = 36.0
margin_right = 140.0
margin_bottom = 56.0
text = "Buy click power buff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoClick" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 331.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/AutoClick"]
margin_right = 187.0
margin_bottom = 14.0
text = "AutoClicks: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/AutoClick"]
margin_top = 18.0
margin_right = 187.0
margin_bottom = 32.0
text = "price: 50"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/AutoClick"]
margin_top = 36.0
margin_right = 187.0
margin_bottom = 56.0
text = "Buyone more autoclick/tick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tick" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 476.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Tick"]
margin_right = 141.0
margin_bottom = 14.0
text = "Ticks: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Tick"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 32.0
text = "price: 100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/Tick"]
margin_top = 36.0
margin_right = 141.0
margin_bottom = 56.0
text = "Buy one more tick/s"
__meta__ = {
"_edit_use_anchors_": false
}
